cmake_minimum_required(VERSION 3.15)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(_0847_main AcWingQuestions/_0847/_0847_main.cpp)
add_executable(_0848_main AcWingQuestions/_0848/_0848_main.cpp)
add_executable(_0849_main AcWingQuestions/_0849/_0849_main.cpp)
add_executable(_0850_main AcWingQuestions/_0850/_0850_main.cpp)
add_executable(_0853_main AcWingQuestions/_0853/_0853_main.cpp)
add_executable(_0851_main AcWingQuestions/_0851/_0851_main.cpp)
add_executable(_0852_main AcWingQuestions/_0852/_0852_main.cpp)
add_executable(_0854_main AcWingQuestions/_0854/_0854_main.cpp)
add_executable(_0858_main AcWingQuestions/_0858/_0858_main.cpp)
add_executable(_0859_main AcWingQuestions/_0859/_0859_main.cpp)
add_executable(_0860_main AcWingQuestions/_0860/_0860_main.cpp)
add_executable(_0861_main AcWingQuestions/_0861/_0861_main.cpp)
add_executable(_0866_main AcWingQuestions/_0866/_0866_main.cpp)
add_executable(_867_main AcWingQuestions/_0867/_867_main.cpp)
add_executable(_0868_main AcWingQuestions/_0868/_0868_main.cpp)
add_executable(_0868_main2 AcWingQuestions/_0868/_0868_main2.cpp)
add_executable(_0869_main AcWingQuestions/_0869/_0869_main.cpp)
add_executable(_0870_main AcWingQuestions/_0870/_0870_main.cpp)
add_executable(_0871_main AcWingQuestions/_0871/_0871_main.cpp)
add_executable(_0872_main AcWingQuestions/_0872/_0872_main.cpp)
add_executable(_0104_main AcWingQuestions/_0104/_0104_main.cpp)
add_executable(_0104_main2 AcWingQuestions/_0104/_0104_main2.cpp)
add_executable(_0104_main3 AcWingQuestions/_0104/_0104_main3.cpp)
add_executable(_0898_main AcWingQuestions/_0898/_0898_main.cpp)
add_executable(_0898_main2 AcWingQuestions/_0898/_0898_main2.cpp)
add_executable(_0756_main AcWingQuestions/_0756/_0756_main.cpp)
add_executable(_1113_main AcWingQuestions/_1113/_1113_main.cpp)
add_executable(_1113_main2 AcWingQuestions/_1113/_1113_main2.cpp)
add_executable(_1346_main AcWingQuestions/_1346/_1346_main.cpp)
add_executable(_0785_main AcWingQuestions/_0785/_0785_main.cpp)